# primordial

./: .gitignore  CLAUDE.md  Cargo.toml  NORTHSTAR.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
cli/: Cargo.toml
cli/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  db.rs
core/: Cargo.toml
core/src/: error.rs  genome.rs  lib.rs  lineage.rs  organism.rs  population.rs  python.rs  selection.rs
gui/: Cargo.toml
gui/src/: main.rs
sim/: config.py  db.py  main.py
sim/experiments/: default.toml  phase1.toml
viz/: phylo.py
world/: Cargo.toml
world/src/: biome.rs  climate.rs  lib.rs  planet.rs  star.rs
