[workspace]
members = ["core", "world", "common", "cli", "gui"]
resolver = "2"

[workspace.dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rayon = "1.10"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
chrono = "0.4"
eframe = "0.31"
egui_plot = "0.31"
