[package]
name = "primordial"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "primordial"
path = "src/main.rs"

[dependencies]
primordial-core = { path = "../core" }
primordial-common = { path = "../common" }
clap = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde_json = { workspace = true }
